--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
 name = "rs-conllu"
 description = "A parser for the CoNLL-U format of the Universal Dependencies project."
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+
+[features]
+serde = ["dep:serde"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.216", features = ["derive"], optional = true}
+
 clap = { version = "4.1.8", features = ["derive"] }
 thiserror = "1.0.40"
 walkdir = "2.3.2"
+derive_more = { version = "1.0.0", features = ["display"] }
